# py-ai-commit

./: .gitignore  README.md  aicommit.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml  python-app.yml
src/: aicommit.py
src/theburrowhub/aicommit/: exceptions.py  models.py
src/theburrowhub/aicommit/commands/: commit_cmd.py  ollama_cmd.py  version_cmd.py
